# glyph

./: .dockerignore  .gitignore  Dockerfile  README.md  prueba.py  pyproject.toml  tutorial.ipynb
glyph/: __init__.py  heaps.py  linear.py  lists.py  tables.py  trees.py  utils.py
