[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glyph-viz"
version = "0.1.0"
authors = [
  { name="Paris Adrián López Ruelas", email="plopezru@itam.mx" },
]
description = "Una librería para visualizar estructuras de datos"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["glyph*"]